syntax = "proto2";

import "Enum.proto";
import "Structure.proto";

option optimize_for = SPEED;

message VERSION_REQ
{
    optional PROTOCOL   id                  = 1 [default = ID_PKT_VERSION_REQ  ];
}

message LOGIN_REQ
{
    optional PROTOCOL   id                  = 1 [default = ID_PKT_LOGIN_REQ ];

    required string  var_uid                     = 2;
    required string  var_token                  = 3;
}

message CREATE_ROOM_REQ
{
    optional PROTOCOL   id                  = 1 [default = ID_PKT_CREATE_ROOM_REQ ];
    required bytes var_name                  = 2;
   
}

message ENTER_ROOM_REQ
{
    optional PROTOCOL   id                  = 1 [default = ID_PKT_ENTER_ROOM_REQ ];
    required int32      var_id                  = 2;
   
}

message LEAVE_ROOM_REQ
{
    optional PROTOCOL   id                  = 1 [default = ID_PKT_LEAVE_ROOM_REQ ];
    required int32      var_id                  = 2;
}

message BROADCAST_ROOM_MESSAGE_REQ
{
    optional PROTOCOL   id                  = 1 [default = ID_PKT_BROADCAST_ROOM_MESSAGE_REQ ];
    required bytes     var_message         = 2;

   required int32 	var_x 	           = 3;
   required int32 	var_y 	           = 4;
   required eTeam   var_color           = 5;

}

message ROOM_LIST_REQ
{
    optional PROTOCOL   id                  = 1 [default = ID_PKT_ROOM_LIST_REQ ];
}

message MATCH_REQ
{
    optional PROTOCOL   id                  = 1 [default = ID_PKT_MATCH_REQ ];
}


message RANK_REQ
{
    optional PROTOCOL   id                        = 1 [default = ID_PKT_RANK_REQ  ];
}


